@@ -1,5 +1,5 @@
 
-/* MP.h automatically generated by ./makeheader.pl on Sun May 25 22:43:33 METDST 1997
+/* MP.h automatically generated by ./makeheader.pl on Thu Jun  5 11:35:57 METDST 1997
 */
 /****************************************************************
  *                  
@@ -99,7 +99,8 @@
 #define MP_RECEIVE  1
 
 /* For checking the status of a link*/
-enum link_status_option {MP_LinkReadyReading, MP_LinkReadyWriting};
+enum link_status_option {MP_LinkReadyReading, MP_LinkReadyWriting,
+                         MP_LinkIsParent};
 typedef enum link_status_option MP_LinkStatus_t;
 
 /* To determine which byte ordering is native and which is actually used. */
@@ -760,7 +761,7 @@ EXTERN MP_Status_t MP_SetEnvBigIntFormat _ANSI_ARGS_((MP_Env_t *env,
                              MP_BigIntOps_t *ops, MP_BigNumFormat_t format));
 EXTERN MP_Status_t MP_SetEnvBigRealFormat _ANSI_ARGS_((MP_Env_t *env, 
                              MP_BigRealOps_t *ops, MP_BigNumFormat_t format));
- 
+EXTERN MP_Status_t open_logfile _ANSI_ARGS_((MP_ENV env));
 #endif /* _MP_Env_h */
 
 /* Stuff included from h/MP_Link.h */
@@ -1424,6 +1425,7 @@ typedef int SOCKET;
 #define MP_CONNECT_MODE         1
 #define MP_LISTEN_MODE          2
 #define MP_LAUNCH_MODE          3
+#define MP_FORK_MODE            4
 
 /* Initial port for listening */
 #define MP_INIT_PORT            "1025"
@@ -1455,6 +1457,7 @@ typedef struct{
     short   peerport;
     char    *peerhost;
     char    *myhost;
+    char     isparent;
 } MP_TCP_t;
 
 #endif
