@@ -1,3 +1,7 @@
+Thu Jun  5 12:02:12 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
+
+	* MP_Config.h.in: added WORDS_BIGENDIAN target 
+
 Sun May 25 11:11:47 1997  Simon Gray  (sgray@Pooh)
 
        * MP_Put.h: removed obsolete IMP_PutMpOperator macro
