@@ -1,3 +1,7 @@
+Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>
+
+	* MP_TcpTransp.h: Added fork mode to MPtcp links
+
 Tue May 20 17:38:53 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
 
 	* Makefile.in (target MP.h): explicitely user perl to call makeheaders
